# LSMC_vs_Reinforcement_Learning

./: .gitignore  AGENTS copy.md  AGENTS.md  README.md  pyproject.toml  ttf_klines_5m_from_1m.sqlite
configs/: mc_paths_front.yaml
docs/: garch_refit_analysis.md  path_quality_analysis.md
src/lsmc_rl/: __init__.py  data.py
src/lsmc_rl/analysis/: __init__.py  garch_refit_report.py  option_lsmc_report.py  path_quality_report.py  policy_evaluation_report.py  trader_choice_backtest.py  volatility_report.py
src/lsmc_rl/evaluation/: __init__.py  evaluator.py  metrics.py  policies.py  selection.py
src/lsmc_rl/rl/: __init__.py  fitted_q.py  kernel_fitted_q.py
src/lsmc_rl/simulation/: __init__.py  paths.py
src/lsmc_rl/valuation/: __init__.py  american.py  common.py  swing.py
src/lsmc_rl/volatility/: __init__.py  gjr_garch.py  har_rv.py
tests/: test_american_fitted_q.py  test_american_kernel_fitted_q.py  test_american_lsmc.py  test_data.py  test_garch_refit_report.py  test_path_quality_report.py  test_path_simulation.py  test_policy_evaluation.py  test_swing_lsmc.py  test_trader_choice_backtest.py  test_volatility_models.py  test_volatility_report.py
